# IA_Algoritmo_Busca

./: CMakeLists.txt  Readme.md  entrada_nao_orientado.txt  entrada_orientado.txt  erro.txt  grafo.cpp  grafo.h  main.cpp  utils.cpp  utils.h
Entradas/: entrada_10.txt  entrada_15.txt  entrada_5.txt
algoritmos/: a_estrela.cpp  a_estrela.h  a_limitado.cpp  a_limitado.h  dfs.cpp  dfs.h
